testings Linux packages